k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  labels:
    app: chat-platform
    env: dev
    managed-by: terraform
