k8s/argocd-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-external
  namespace: chat-app
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
